--- a/package.json
+++ b/package.json
@@ -7,11 +7,35 @@
   "author": "Eric Bower <me@erock.io>",
   "license": "MIT",
   "private": false,
+  "scripts": {
+    "test": "ava",
+    "prepare": "husky install"
+  },
   "devDependencies": {
     "@types/node": "^15.3.0",
+    "ava": "^3.15.0",
+    "husky": ">=6",
+    "lint-staged": ">=10",
     "prettier": "^2.3.0",
-    "redux-saga": "^1.1.3",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
+  },
+  "dependencies": {
+    "immer": "^9.0.2",
+    "redux": "^4.1.0",
+    "redux-saga": "^1.1.3",
+    "reselect": "^4.0.0",
+    "robodux": "^10.1.2"
+  },
+  "ava": {
+    "extensions": [
+      "ts"
+    ],
+    "require": [
+      "ts-node/register"
+    ]
+  },
+  "lint-staged": {
+    "*.{js,css,md}": "prettier --write"
   }
 }
