--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "private": false,
   "scripts": {
     "test": "ava",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "format": "prettier --write **/*.ts"
   },
   "devDependencies": {
     "@types/node": "^15.3.0",
@@ -36,6 +37,6 @@
     ]
   },
   "lint-staged": {
-    "*.{js,css,md}": "prettier --write"
+    "*.ts": "prettier --write"
   }
 }
