--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "immer": "^9.0.2",
     "redux": "^4.1.0",
     "redux-saga": "^1.1.3",
+    "redux-saga-creator": "^2.0.1",
     "reselect": "^4.0.0",
     "robodux": "^10.1.2"
   },
