--- a/package.json
+++ b/package.json
@@ -20,18 +20,18 @@
     "@types/node": "^15.3.0",
     "ava": "^3.15.0",
     "husky": ">=6",
+    "immer": "^9.0.2",
     "lint-staged": ">=10",
     "prettier": "^2.3.0",
+    "redux": "^4.1.0",
+    "reselect": "^4.0.0",
+    "robodux": "^10.1.2",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
   },
   "dependencies": {
-    "immer": "^9.0.2",
-    "redux": "^4.1.0",
     "redux-saga": "^1.1.3",
-    "redux-saga-creator": "^2.0.1",
-    "reselect": "^4.0.0",
-    "robodux": "^10.1.2"
+    "redux-saga-creator": "^2.0.1"
   },
   "ava": {
     "extensions": [
