--- a/package.json
+++ b/package.json
@@ -19,17 +19,19 @@
     "@types/node": "^15.3.0",
     "ava": "^3.15.0",
     "husky": ">=6",
-    "immer": "^9.0.2",
     "lint-staged": ">=10",
     "prettier": "^2.3.0",
     "redux": "^4.1.0",
+    "redux-saga": "^1.1.3",
     "reselect": "^4.0.0",
-    "robodux": "^10.1.2",
+    "robodux": "^11.0.1",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
   },
+  "peerDependencies": {
+    "redux-saga": "^1.1.3"
+  },
   "dependencies": {
-    "redux-saga": "^1.1.3",
     "redux-saga-creator": "^2.0.1"
   },
   "ava": {
