--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "redux": "^4.1.0",
     "redux-saga": "^1.1.3",
     "reselect": "^4.0.0",
-    "robodux": "^11.0.1",
+    "robodux": "^11.0.2",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
   },
@@ -32,6 +32,7 @@
     "redux-saga": "^1.1.3"
   },
   "dependencies": {
+    "redux-batched-actions": "^0.5.0",
     "redux-saga-creator": "^2.0.1"
   },
   "ava": {
