--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "saga-query",
   "version": "0.0.0",
-  "description": "Data synchronization using redux-saga",
+  "description": "Data fetching and caching using a middleware system",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "repository": "https://github.com/neurosnap/saga-query.git",
@@ -24,7 +24,6 @@
     "redux": "^4.1.0",
     "redux-saga": "^1.1.3",
     "reselect": "^4.0.0",
-    "robodux": "^11.0.1",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
   },
@@ -32,7 +31,9 @@
     "redux-saga": "^1.1.3"
   },
   "dependencies": {
-    "redux-saga-creator": "^2.0.1"
+    "redux-batched-actions": "^0.5.0",
+    "redux-saga-creator": "^2.0.1",
+    "robodux": "^11.0.2"
   },
   "ava": {
     "extensions": [
