--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "husky": ">=6",
     "lint-staged": ">=10",
     "prettier": "^2.3.0",
+    "react": "^17.0.2",
+    "react-redux": "^7.2.5",
     "redux": "^4.1.0",
     "redux-saga": "^1.1.3",
     "reselect": "^4.0.0",
@@ -28,7 +30,17 @@
     "typescript": "^4.2.4"
   },
   "peerDependencies": {
+    "react": ">=16.8",
+    "react-redux": "^7.2.5",
     "redux-saga": "^1.1.3"
+  },
+  "peerDependenciesMeta": {
+    "react": {
+      "optional": true
+    },
+    "react-redux": {
+      "optional": true
+    }
   },
   "dependencies": {
     "redux-batched-actions": "^0.5.0",
