--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lint-staged": ">=10",
     "prettier": "^2.3.0",
     "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
     "redux": "^4.1.0",
     "redux-saga": "^1.1.3",
