--- a/package.json
+++ b/package.json
@@ -32,8 +32,20 @@
   },
   "peerDependencies": {
     "react": ">=16.8",
+    "react-dom": ">=16.8",
     "react-redux": "^7.2.5",
     "redux-saga": "^1.1.3"
+  },
+  "peerDependenciesMeta": {
+    "react": {
+      "optional": true
+    },
+    "react-redux": {
+      "optional": true
+    },
+    "react-dom": {
+      "optional": true
+    }
   },
   "dependencies": {
     "redux-batched-actions": "^0.5.0",
