--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "prepublish": "yarn build"
   },
   "exports": {
+    "./package.json": "./package.json",
     ".": {
       "types": "./dist/index.d.ts",
       "default": "./dist/index.js"
@@ -23,6 +24,16 @@
     "./react": {
       "types": "./dist/react.d.ts",
       "default": "./dist/react.js"
+    }
+  },
+  "typesVersions": {
+    "*": {
+      "*": [
+        "dist/index.d.ts"
+      ],
+      "react": [
+        "dist/react.d.ts"
+      ]
     }
   },
   "devDependencies": {
