--- a/package.json
+++ b/package.json
@@ -54,8 +54,7 @@
   "peerDependencies": {
     "react": ">=16.8",
     "react-dom": ">=16.8",
-    "react-redux": "^7.2.5",
-    "redux-saga": "^1.1.3"
+    "react-redux": "^7.2.5"
   },
   "peerDependenciesMeta": {
     "react": {
@@ -70,6 +69,7 @@
   },
   "dependencies": {
     "redux-batched-actions": "^0.5.0",
+    "redux-saga": "^1.1.3",
     "redux-saga-creator": "^2.0.1",
     "robodux": "^13.0.0"
   },
