--- a/package.json
+++ b/package.json
@@ -37,10 +37,13 @@
     }
   },
   "devDependencies": {
-    "@types/node": "^15.3.0",
+    "@types/node": "^17.0.21",
     "ava": "^3.15.0",
+    "cross-fetch": "^3.1.5",
     "husky": ">=6",
     "lint-staged": ">=10",
+    "nock": "^13.2.4",
+    "node-fetch": "2",
     "prettier": "^2.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -49,7 +52,7 @@
     "redux-saga": "^1.1.3",
     "reselect": "^4.0.0",
     "ts-node": "^9.1.1",
-    "typescript": "^4.5.4"
+    "typescript": "^4.5.5"
   },
   "peerDependencies": {
     "react": ">=16.8",
@@ -78,7 +81,8 @@
       "ts"
     ],
     "require": [
-      "ts-node/register"
+      "ts-node/register",
+      "cross-fetch/polyfill"
     ]
   },
   "lint-staged": {
