--- a/package.json
+++ b/package.json
@@ -37,26 +37,24 @@
     }
   },
   "devDependencies": {
-    "@types/node": "^17.0.21",
-    "ava": "^3.15.0",
+    "@types/node": "^17.0.23",
+    "ava": "^4.1.0",
     "cross-fetch": "^3.1.5",
     "husky": ">=6",
     "lint-staged": ">=10",
     "nock": "^13.2.4",
-    "prettier": "^2.3.0",
+    "prettier": "^2.6.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
-    "redux": "^4.1.0",
     "redux-saga": "^1.1.3",
-    "reselect": "^4.0.0",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.5.5"
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.3"
   },
   "peerDependencies": {
     "react": ">=16.8",
     "react-dom": ">=16.8",
-    "react-redux": "^7.2.5"
+    "react-redux": ">=7.2.0"
   },
   "peerDependenciesMeta": {
     "react": {
@@ -70,6 +68,7 @@
     }
   },
   "dependencies": {
+    "redux": "^4.1.2",
     "redux-batched-actions": "^0.5.0",
     "redux-saga": "^1.1.3",
     "redux-saga-creator": "^2.0.1",
