--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
     "@types/node": "^17.0.23",
     "ava": "^4.1.0",
     "cross-fetch": "^3.1.5",
-    "husky": ">=6",
-    "lint-staged": ">=10",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.3.7",
     "nock": "^13.2.4",
     "prettier": "^2.6.2",
     "react": "^17.0.2",
