--- a/package.json
+++ b/package.json
@@ -72,7 +72,8 @@
     "redux-batched-actions": "^0.5.0",
     "redux-saga": "^1.1.3",
     "redux-saga-creator": "^2.0.1",
-    "robodux": "^14.0.0"
+    "robodux": "^14.0.0",
+    "typed-redux-saga": "^1.4.0"
   },
   "ava": {
     "extensions": [
