--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "private": false,
   "scripts": {
     "prebuild": "shx rm -rf dist",
+    "postbuild": "shx rm dist/*.test.*",
     "test": "tsc --noEmit && ava",
     "prepare": "husky install",
     "format": "prettier --write **/*.ts",
