--- a/package.json
+++ b/package.json
@@ -2,66 +2,55 @@
   "name": "saga-query",
   "version": "0.0.0",
   "description": "Data fetching and caching using a middleware system",
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
   "repository": "https://github.com/redux-saga/saga-query.git",
   "author": "Eric Bower <me@erock.io>",
   "license": "MIT",
   "private": false,
-  "scripts": {
-    "prebuild": "shx rm -rf dist",
-    "postbuild": "shx rm dist/*.test.*",
-    "test": "tsc --noEmit && ava",
-    "prepare": "husky install",
-    "format": "prettier --write **/*.ts",
-    "build": "yarn build:base && yarn build:react",
-    "build:base": "rollup -c",
-    "build:react": "rollup -c --config-react"
-  },
+  "type": "module",
+  "types": "./dist/index.d.ts",
+  "source": "./src/index.ts",
+  "main": "./dist/saga-query.cjs",
+  "umd:main": "dist/saga-query.umd.js",
+  "module": "dist/saga-query.js",
   "exports": {
     "./package.json": "./package.json",
     ".": {
-      "import": "./dist/esm/index.mjs",
       "types": "./dist/index.d.ts",
-      "module": "./dist/esm/index.js",
-      "default": "./dist/index.js"
+      "require": "./dist/saga-query.cjs",
+      "default": "./dist/saga-query.modern.mjs"
     },
     "./react": {
-      "import": "./dist/esm/react.mjs",
       "types": "./dist/react.d.ts",
-      "module": "./dist/esm/react.js",
-      "default": "./dist/react.js"
+      "require": "./dist/react.cjs",
+      "default": "./dist/react.modern.mjs"
     }
   },
+  "scripts": {
+    "prebuild": "rm -rf dist",
+    "test": "tsc --noEmit && ava",
+    "prepare": "husky install",
+    "format": "prettier --write src/*.ts",
+    "build": "yarn microbundle src/index.ts src/react.ts"
+  },
   "devDependencies": {
-    "@babel/core": "^7.20.2",
-    "@babel/plugin-transform-typescript": "^7.20.2",
-    "@babel/preset-env": "^7.20.2",
-    "@rollup/plugin-babel": "^6.0.2",
-    "@rollup/plugin-node-resolve": "^15.0.1",
-    "@rollup/plugin-replace": "^5.0.1",
-    "@rollup/plugin-typescript": "^9.0.2",
     "@testing-library/react": "^13.2.0",
-    "@types/node": "^17.0.23",
+    "@types/node": "^18.11.9",
     "ava": "^4.1.0",
     "cross-fetch": "^3.1.5",
-    "esbuild": "^0.15.14",
+    "esbuild-node-loader": "^0.8.0",
     "global-jsdom": "^8.4.0",
     "husky": "^7.0.4",
     "jsdom": "^19.0.0",
     "lint-staged": "^12.3.7",
+    "microbundle": "^0.15.1",
     "nock": "^13.2.4",
     "prettier": "^2.6.2",
     "react": "18",
     "react-dom": "18",
     "react-redux": "^8.0.1",
     "redux-saga": "^1.1.3",
-    "rollup": "^3.3.0",
-    "rollup-plugin-esbuild": "^5.0.0",
-    "rollup-plugin-terser": "^7.0.2",
-    "shx": "^0.3.4",
-    "ts-node": "^10.7.0",
-    "typescript": "^4.6.3"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.3"
   },
   "peerDependencies": {
     "react": ">=16.8",
@@ -83,11 +72,15 @@
     "redux": "^4.1.2",
     "redux-batched-actions": "^0.5.0",
     "redux-saga": "^1.1.3",
-    "robodux": "^14.0.0"
+    "robodux": "^15.0.0"
   },
   "ava": {
-    "extensions": [
-      "ts"
+    "extensions": {
+      "ts": "module"
+    },
+    "nodeArguments": [
+      "--loader=esbuild-node-loader",
+      "--no-warnings"
     ],
     "require": [
       "ts-node/register",
