--- a/package.json
+++ b/package.json
@@ -33,17 +33,17 @@
     "build": "yarn microbundle src/index.ts src/react.ts"
   },
   "devDependencies": {
+    "@esbuild-kit/esm-loader": "^2.5.0",
     "@testing-library/react": "^13.2.0",
     "@types/node": "^18.11.9",
-    "ava": "^4.1.0",
+    "ava": "^5.1.0",
     "cross-fetch": "^3.1.5",
-    "esbuild-node-loader": "^0.8.0",
     "global-jsdom": "^8.4.0",
     "husky": "^7.0.4",
     "jsdom": "^19.0.0",
     "lint-staged": "^12.3.7",
     "microbundle": "^0.15.1",
-    "nock": "^13.2.4",
+    "nock": "^13.2.9",
     "prettier": "^2.6.2",
     "react": "18",
     "react-dom": "18",
@@ -79,11 +79,13 @@
       "ts": "module"
     },
     "nodeArguments": [
-      "--loader=esbuild-node-loader",
+      "--loader=@esbuild-kit/esm-loader",
+      "--experimental-specifier-resolution=node",
+      "--no-experimental-fetch",
       "--no-warnings"
     ],
     "require": [
-      "ts-node/register",
+      "ts-node/register/transpile-only",
       "cross-fetch/polyfill"
     ]
   },
