fix(tests): no experimental fetch

--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "extensions": [
       "ts"
     ],
+    "nodeArguments": ["--no-experimental-fetch"],
     "require": [
       "ts-node/register",
       "cross-fetch/polyfill"
