--- a/package.json
+++ b/package.json
@@ -93,13 +93,15 @@
     "redux": "^4.1.2",
     "redux-batched-actions": "^0.5.0",
     "redux-saga": "^1.1.3",
-    "robodux": "^14.0.0"
+    "robodux": "^15.0.0"
   },
   "ava": {
     "extensions": [
       "ts"
     ],
-    "nodeArguments": ["--no-experimental-fetch"],
+    "nodeArguments": [
+      "--no-experimental-fetch"
+    ],
     "require": [
       "ts-node/register",
       "cross-fetch/polyfill"
