--- a/package.json
+++ b/package.json
@@ -2,40 +2,33 @@
   "name": "saga-query",
   "version": "0.0.0",
   "description": "Data fetching and caching using a middleware system",
-  "repository": "https://github.com/redux-saga/saga-query.git",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "repository": "https://github.com/neurosnap/saga-query.git",
   "author": "Eric Bower <me@erock.io>",
   "license": "MIT",
   "private": false,
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
   "scripts": {
-    "prebuild": "shx rm -rf dist",
-    "postbuild": "shx rm dist/*.test.*",
     "test": "tsc --noEmit && ava",
     "prepare": "husky install",
     "format": "prettier --write **/*.ts",
-    "build": "yarn build:base && yarn build:react",
-    "build:base": "rollup -c",
-    "build:react": "rollup -c --config-react"
+    "build": "tsc",
+    "prepublish": "yarn build"
   },
   "exports": {
     "./package.json": "./package.json",
     ".": {
-      "import": "./dist/esm/index.mjs",
       "types": "./dist/index.d.ts",
-      "module": "./dist/esm/index.js",
       "default": "./dist/index.js"
     },
     "./react": {
-      "import": "./dist/esm/react.mjs",
       "types": "./dist/react.d.ts",
-      "module": "./dist/esm/react.js",
       "default": "./dist/react.js"
     }
   },
   "typesVersions": {
     "*": {
-      ".": [
+      "*": [
         "dist/index.d.ts"
       ],
       "react": [
@@ -44,18 +37,10 @@
     }
   },
   "devDependencies": {
-    "@babel/core": "^7.20.2",
-    "@babel/plugin-transform-typescript": "^7.20.2",
-    "@babel/preset-env": "^7.20.2",
-    "@rollup/plugin-babel": "^6.0.2",
-    "@rollup/plugin-node-resolve": "^15.0.1",
-    "@rollup/plugin-replace": "^5.0.1",
-    "@rollup/plugin-typescript": "^9.0.2",
     "@testing-library/react": "^13.2.0",
     "@types/node": "^17.0.23",
     "ava": "^4.1.0",
     "cross-fetch": "^3.1.5",
-    "esbuild": "^0.15.14",
     "global-jsdom": "^8.4.0",
     "husky": "^7.0.4",
     "jsdom": "^19.0.0",
@@ -66,10 +51,6 @@
     "react-dom": "18",
     "react-redux": "^8.0.1",
     "redux-saga": "^1.1.3",
-    "rollup": "^3.3.0",
-    "rollup-plugin-esbuild": "^5.0.0",
-    "rollup-plugin-terser": "^7.0.2",
-    "shx": "^0.3.4",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
   },
@@ -93,14 +74,12 @@
     "redux": "^4.1.2",
     "redux-batched-actions": "^0.5.0",
     "redux-saga": "^1.1.3",
-    "robodux": "^15.0.0"
+    "redux-saga-creator": "^2.0.1",
+    "robodux": "^14.0.0"
   },
   "ava": {
     "extensions": [
       "ts"
-    ],
-    "nodeArguments": [
-      "--no-experimental-fetch"
     ],
     "require": [
       "ts-node/register",
