--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,6 +13,8 @@ jobs:
           registry-url: https://registry.npmjs.org
       - name: install dependencies
         run: yarn install --frozen-lockfile
+      - name: build
+        run: NODE_ENV=production yarn build
       - name: test
         run: yarn test
       - name: version
