--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "test": "tsc --noEmit && ava",
     "prepare": "husky install",
     "format": "prettier --write **/*.ts",
-    "build": "tsc",
-    "prepublish": "yarn build"
+    "build": "tsc"
   },
   "exports": {
     "./package.json": "./package.json",
