revert build system (#21)

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,7 +13,7 @@ jobs:
           registry-url: https://registry.npmjs.org
       - name: install dependencies
         run: yarn install --frozen-lockfile
-      - name: build files
+      - name: build
         run: NODE_ENV=production yarn build
       - name: test
         run: yarn test
