--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "private": false,
   "scripts": {
     "test": "tsc --noEmit && ava",
+    "template": "ts-node ./api-type-template.ts",
     "prepare": "husky install",
     "format": "prettier --write **/*.ts",
     "build": "tsc"
@@ -38,6 +39,7 @@
   "devDependencies": {
     "@testing-library/react": "^13.2.0",
     "@types/node": "^17.0.23",
+    "@types/prettier": "^2.7.2",
     "ava": "^4.1.0",
     "cross-fetch": "^3.1.5",
     "global-jsdom": "^8.4.0",
