--- a/package.json
+++ b/package.json
@@ -75,7 +75,8 @@
     "redux": "^4.1.2",
     "redux-batched-actions": "^0.5.0",
     "redux-saga": "^1.1.3",
-    "robodux": "^14.0.0"
+    "robodux": "^14.0.0",
+    "typed-redux-saga": "^1.5.0"
   },
   "ava": {
     "extensions": [
