--- a/package.json
+++ b/package.json
@@ -85,7 +85,10 @@
     "require": [
       "ts-node/register",
       "cross-fetch/polyfill"
-    ]
+    ],
+    "nodeArguments": [
+			"--no-experimental-fetch"
+		]
   },
   "lint-staged": {
     "*.ts": "prettier --write"
