--- a/package.json
+++ b/package.json
@@ -51,7 +51,6 @@
     "react": "18",
     "react-dom": "18",
     "react-redux": "^8.0.1",
-    "redux-saga": "^1.1.3",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
   },
@@ -85,6 +84,9 @@
     "require": [
       "ts-node/register",
       "cross-fetch/polyfill"
+    ],
+    "nodeArguments": [
+      "--no-experimental-fetch"
     ]
   },
   "lint-staged": {
